fix(`Card`): add missing `overflow: hidden` styles

--- a/src/card/styles.css
+++ b/src/card/styles.css
@@ -10,6 +10,8 @@
 
     background-color: var(--gray-1);
 
+    overflow: hidden;
+
     .card-footer,
     .card-header {
         padding: 0 var(--card-padding-x);
